--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -26,6 +26,17 @@ h1, h2, h3, h4, h5{
 }
 
 /* Контент */
+.page{
+    width: 1000px;
+    margin: auto;
+}
+.header {
+    padding: 5px;
+    border-bottom: 1px solid #ccc;
+    margin: 0 0 25px 0;
+    text-align: center;
+    box-shadow: 1px 1px 20px 1px #cecece;
+}
 .main-login {
     width: 400px;
     margin: 50px auto;
@@ -33,12 +44,12 @@ h1, h2, h3, h4, h5{
     box-shadow: 0px 2px 20px 8px #ccc;
 }
 .main {
-    width: 57%;
+    width: 80%;
     float: left;
     margin: 0 10px 10px 10px;
     box-shadow: 0 0 10px 0 #ccc;
     padding: 10px;
-	background: #fff;
+    background: #fff;
 }
 .title-post {
     text-align: center;
@@ -46,47 +57,29 @@ h1, h2, h3, h4, h5{
     font-size: 15px;
 }
 /*Правый сайдбар*/
-.right-side{
-	width: 20%;
-	float: right;
-	background-color: #fff;
+.right-side {
+    width: 15%;
+    float: right;
+    background-color: #fff;
 }
 .profil{
     padding: 10px;
 }
-.rek-schet {
-    text-align: center;
-    background-color: #71B7FD;
-    font-size: 16px;
-    color: #fff;
-    box-shadow: 0 2px 4px 1px #9d9d9d;
-    padding-bottom: 5px;
-}
-.form-otv-pismo{
-	text-align: center;
-}
-.url-otv-pismo{
-	text-align: center;
-	color: #89A688;
-}
+
 /*Футер*/
 .footer {
-    margin: 25px 25px 0 25px;
+    margin: 25px auto;
+    top: 100%;
     height: 50px;
-    background-color: #71B7FD;
+    background-color: #f5f5f5;
     padding: 15px;
-    /*position: absolute;*/
+    /* float: left; */
+    position: absolute;
     bottom: 0;
-    width: 97%;
+    width: 1000px;
+    box-shadow: 1px 1px 10px 1px #cecece;
 }
 
-.right-footer{
-	float: right;
-	color: #fff;
-}
-.a-footer{
-	color: #fff;
-}
 
 /*Медиа*/
 @media (max-width: 992px){
