--- a/templates/myclient/add-client.html
+++ b/templates/myclient/add-client.html
@@ -1,4 +1,5 @@
 {% extends 'myclient/base.html' %}
+{% load bootstrap3 %}
 {% block title %}
 Добавить клиента
 {% endblock %}
@@ -8,5 +9,11 @@
 {% endblock %}
 
 {% block content %}
-
+<form   method="post" action="">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+    {% bootstrap_button "Сохранить" button_type="submit" button_class="btn-primary" %}
+    {% endbuttons %}
+</form>
 {% endblock %}
