--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -44,17 +44,21 @@ h1, h2, h3, h4, h5{
     box-shadow: 0px 2px 20px 8px #ccc;
 }
 .main {
-    width: 80%;
+    width: 83%;
     float: left;
     margin: 0 10px 10px 10px;
     box-shadow: 0 0 10px 0 #ccc;
     padding: 10px;
     background: #fff;
+    font-size: 12px;
 }
 .title-post {
     text-align: center;
     margin-top: -25px;
     font-size: 15px;
+}
+.price-table{
+    width: 7%;
 }
 /*Правый сайдбар*/
 .right-side {
