--- a/templates/myclient/client_delete.html
+++ b/templates/myclient/client_delete.html
@@ -13,7 +13,8 @@
   {% csrf_token %}
   {% buttons %}
   {% bootstrap_button "Да" button_type="submit" button_class="btn-primary" %}
+  <a class="btn-warning btn" href="{% url "my_client" %}">Нет</a>
   {% endbuttons %}
-  <a href="{% url "my_client" %}">Нет</a>
+
 </form>
 {% endblock%}
