--- a/templates/myclient/my-client.html
+++ b/templates/myclient/my-client.html
@@ -49,7 +49,11 @@
         {{client.my_manager}}
     </td>
     <td>
-        {{client.hide}}
+        {% if client.hide == '0' or client.hide_date == ""%}
+
+        {% else %}
+            {{client.hide_date}}
+        {% endif %}
     </td>
     <td>
         {{client.naznach_one}}<br />
@@ -72,6 +76,26 @@
         {{client.email}}
     </td>
     <td>
+        {% if client.hide == "0" or client.hide_date == ""%}
+            <a href="#dialog2" name="modal2" class="more">Скрыть</a><br />
+            <!-- Форма обратной связи-->
+            <div id="boxes2">
+            <div id="dialog2" class="window2"> Текст модального окна
+            <div class="top2"><a href="#" class="link close"/>Закрыть</a></div>
+            <div id="w2">
+              <h1 class="cont">Скрыть клиента!</h1>
+              <form id="contactform" name="contact" method="post" action="{% url 'hide_client' pk=client.pk %}">
+            	  <p class="note"><span class="req"></span> Поля обязательны для заполнения</p>
+            	  	{% csrf_token %}
+            	  	{{ form.as_p }}
+            	  	<input class="btn-us" type="submit" value="Отправить" />
+            	 </form>
+             </div>
+             </div>
+             </div>
+        {% else %}
+            <a href="{% url 'show_client' pk=client.pk %}">Открыть</a><br />
+        {% endif %}
         <a href="{% url 'update_client' pk=client.pk %}">Редактировать</a><br />
         <a href="{% url 'delete_client' pk=client.pk %}">Удалить</a>
     </td>
@@ -79,4 +103,43 @@
 
 {% endfor %}
 </table>
+<!-- Маска, затемняющая фон -->
+<div id="mask"></div>
+
+
+
+
+<script>
+	jQuery(document).ready(function($) {
+
+	//Всплывающие окно с формы
+    $('a[name=modal2]').click(function(e) {
+    	e.preventDefault();
+    	var id = $(this).attr('href');
+    	var maskHeight = $(document).height();
+    	var maskWidth = $(window).width();
+    	$('#mask').css({'width':maskWidth,'height':maskHeight});
+    	$('#mask').fadeIn(1000);
+    	$('#mask').fadeTo("slow",0.8);
+    	var winH = $(window).height();
+    	var winW = $(window).width();
+    	$(id).css('top',  winH/2-$(id).height()/2);
+    	$(id).css('left', winW/2-$(id).width()/2);
+    	$(id).fadeIn(2000);
+		$("body,html").animate({
+				scrollTop:0
+			}, 800);
+			return false;
+    });
+    $('.window2 .close').click(function (e) {
+    	e.preventDefault();
+    	$('#mask, .window2').hide();
+    });
+    $('#mask').click(function () {
+    	$(this).hide();
+    	$('.window2').hide();
+    });
+
+	});
+</script>
 {% endblock %}
