--- a/templates/myclient/my-client.html
+++ b/templates/myclient/my-client.html
@@ -99,6 +99,7 @@
         <a href="{% url 'add_task_client' pk=client.pk %}">Задача</a><br />
         <a href="{% url 'update_client' pk=client.pk %}">Редактировать</a><br />
         <a href="{% url 'delete_client' pk=client.pk %}">Удалить</a>
+        <a href="{% url 'copy_client' pk=client.pk %}">Копировать</a>
     </td>
 </tr>
 
