--- a/templates/myclient/copy_client.html
+++ b/templates/myclient/copy_client.html
@@ -13,7 +13,7 @@
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
-    {% bootstrap_button "Сохранить" button_type="submit" button_class="btn-primary" %}
+    {% bootstrap_button "Добавить" button_type="submit" button_class="btn-primary" %}
     {% endbuttons %}
 </form>
 {% endblock %}
