--- a/templates/myclient/my-client.html
+++ b/templates/myclient/my-client.html
@@ -40,6 +40,7 @@
 <th class="span-task active">
 
 </th>
+{% if clients %}
 {% for client in clients %}
 <tr>
     <td>
@@ -104,6 +105,76 @@
 </tr>
 
 {% endfor %}
+{% else %}
+{% for client in search_client %}
+<tr>
+    <td>
+        {{client.name}}
+    </td>
+    <td>
+        {{client.my_manager}}
+    </td>
+    <td>
+        {% if client.hide == '0' or client.hide_date == "" %}
+
+        {% else %}
+            {{client.hide_date}}
+        {% endif %}
+    </td>
+    <td>
+        {{client.naznach_one}}<br />
+        {{client.naznach_two}}
+    </td>
+    <td>
+        {{client.tel}}
+    </td>
+    <td class="price-table">
+        от {{client.area_ot}} <br />
+        до {{client.area_do}}
+    </td>
+    <td class="price-table">
+        {{client.price_obsh}}
+    </td>
+    <td>
+        {{client.price_m}}
+    </td>
+    <td>
+        {{client.email}}
+    </td>
+    <td>
+        {% if client.my_manager == user %}
+        {% if client.hide == "0" or client.hide_date == "" %}
+            <a href="#dialog2" name="modal2" class="more">Скрыть</a><br />
+            <!-- Форма обратной связи-->
+            <div id="boxes2">
+            <div id="dialog2" class="window2"> Текст модального окна
+            <div class="top2"><a href="#" class="link close"/>Закрыть</a></div>
+            <div id="w2">
+              <h1 class="cont">Скрыть клиента!</h1>
+              <form id="contactform" name="contact" method="post" action="{% url 'hide_client' pk=client.id %}">
+            	  <p class="note"><span class="req"></span> Поля обязательны для заполнения</p>
+            	  	{% csrf_token %}
+            	  	{{ form.as_p }}
+            	  	<input class="btn-us" type="submit" value="Отправить" />
+            	 </form>
+             </div>
+             </div>
+             </div>
+        {% else %}
+            <a href="{% url 'show_client' pk=client.pk %}">Открыть</a><br />
+        {% endif %}
+        <a href="{% url 'add_task_client' pk=client.pk %}">Задача</a><br />
+        <a href="{% url 'update_client' pk=client.pk %}">Редактировать</a><br />
+        <a href="{% url 'delete_client' pk=client.pk %}">Удалить</a>
+        <a href="{% url 'copy_client' pk=client.pk %}">Копировать</a>
+        {% else %}
+            Есть совпадение, у коллеги {{client.my_manager}}
+        {% endif %}
+    </td>
+</tr>
+
+{% endfor %}
+{% endif %}
 </table>
 <!-- Маска, затемняющая фон -->
 <div id="mask"></div>
