--- a/templates/myobject/my-object.html
+++ b/templates/myobject/my-object.html
@@ -1,4 +1,5 @@
 {% extends 'myclient/base.html' %}
+{% load bootstrap3 %}
 {% block title %}
 Мои объекты
 {% endblock %}
@@ -8,9 +9,145 @@
 {% endblock %}
 
 {% block content %}
+<table class="table table-bordered table-hover">
+    <th class="active">
+    № объекта
+</th>
+<th class="active">
+    Тип объекта
+</th>
+<th class="span-task active">
+    Станция метро
+</th>
+<th class="span-task active">
+    Адрес
+</th>
+<th class="span-task active">
+    Площадь
+</th>
+<th class="span-task active price-table">
+    Цена
+</th>
+<th class="span-task active">
+    Собственник
+</th>
+<th class="span-task active">
+    Дата последнего прозвона
+</th>
+<th class="span-task active">
+    Скрытые
+</th>
+<th class="span-task active">
+
+</th>
+{% if myobjects %}
 {% for obj in myobjects %}
-{{obj.id}}
-{{obj.type_obj}}
-{{obj.okrug}}<br />
+<tr>
+    <td>
+        {{obj.id}}
+    </td>
+    <td>
+        {{obj.type_obj}}
+    </td>
+    <td>
+        {{obj.station_one}}<br />
+        {{obj.station_two}}
+    </td>
+    <td>
+        {{obj.adres}}
+    </td>
+    <td>
+        {{obj.area}}
+    </td>
+    <td>
+        {{obj.price}}
+    </td>
+    <td>
+        {{obj.block_name}}<br />
+        {{obj.block_tel}}<br />
+        {{obj.block_email}}
+    </td>
+    <td>
+
+    </td>
+    <td>
+        {% if obj.hide == '0' or obj.hide_date == "" %}
+
+        {% else %}
+            {{obj.hide_date}}
+        {% endif %}
+    <td>
+        {% if obj.hide == "0" or obj.hide_date == "" %}
+            <a href="{% url 'hide_obj' pk=obj.pk %}" name="modal2" class="more">Скрыть</a><br />
+        {% else %}
+            <a href="{% url 'show_obj' pk=obj.pk %}">Открыть</a><br />
+        {% endif %}
+        <a href="{% url 'add_task_client' pk=obj.pk %}">Задача</a><br />
+        <a href="{% url 'update_client' pk=obj.pk %}">Редактировать</a><br />
+        <a href="{% url 'delete_obj' pk=obj.pk %}">Удалить</a>
+        <a href="{% url 'copy_client' pk=obj.pk %}">Копировать</a>
+    </td>
+</tr>
+
 {% endfor %}
+{% else %}
+{% for obj in search_object %}
+<tr>
+    <td>
+        {{obj.id}}
+    </td>
+    <td>
+        {{obj.type_obj}}
+    </td>
+    <td>
+        {{obj.station_one}}<br />
+        {{obj.station_two}}
+    </td>
+    <td>
+        {{obj.adres}}
+    </td>
+    <td>
+        {{obj.area}}
+    </td>
+    <td>
+        {{obj.price}}
+    </td>
+    <td>
+        {% if obj.my_manager == user %}
+        {{obj.block_name}}<br />
+        {{obj.block_tel}}<br />
+        {{obj.block_email}}
+        {% else %}
+        Запросить
+        {% endif %}
+    </td>
+    <td>
+
+    </td>
+    <td>
+        {% if obj.hide == '0' or obj.hide_date == "" %}
+
+        {% else %}
+            {{obj.hide_date}}
+        {% endif %}
+    <td>
+        {% if obj.my_manager == user %}
+            {% if obj.hide == "0" or obj.hide_date == "" %}
+            <a href="{% url 'hide_obj' pk=obj.pk %}" name="modal2" class="more">Скрыть</a><br />
+            {% else %}
+            <a href="{% url 'show_obj' pk=obj.pk %}">Открыть</a><br />
+            {% endif %}
+        <a href="{% url 'add_task_client' pk=obj.pk %}">Задача</a><br />
+        <a href="{% url 'update_client' pk=obj.pk %}">Редактировать</a><br />
+        <a href="{% url 'delete_obj' pk=obj.pk %}">Удалить</a>
+        <a href="{% url 'copy_client' pk=obj.pk %}">Копировать</a>
+        {% else %}
+            Есть совпадение, у коллеги {{obj.my_manager}}
+        {% endif %}
+    </td>
+</tr>
+{% endfor %}
+{% endif %}
+</table>
+
 {% endblock %}
