--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -79,6 +79,14 @@ h1, h2, h3, h4, h5{
 .chec5kbox {
     float: left;
 }
+
+/* Мои задачи */
+.task{
+    margin: 0 0 10px 0;
+    padding: 5px;
+    border: 1px solid #cecece;
+}
+
 /*Правый сайдбар*/
 .right-side {
     width: 15%;
