--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -36,12 +36,8 @@
 			</div>
 		</div>
 
-		<div class="menu">
-			<a href="" class="">ГЛАВНАЯ</a>
-			<a href="" class="">НОВЫЕ</a>
-			<a href="" class="">ПРЕИМУЩЕСТВА</a>
-			<a href="" class="">ЗАЯВКА</a>
-			<nav class="navbar navbar-default" role="navigation">
+		<div class="menu-bar">
+			<nav class="navbar menu" role="navigation">
 				<div class="container-fluid">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header">
@@ -57,24 +53,24 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li>
-								<a href="" class="">ГЛАВНАЯ</a>
+								<a href="" class="a-nav">ГЛАВНАЯ</a>
 							</li>
 							<li>
-								<a href="" class="">НОВЫЕ</a>
+								<a href="" class="a-nav">НОВЫЕ</a>
 							</li>
 							<li>
-								<a href="" class="">ПРЕИМУЩЕСТВА</a>
+								<a href="" class="a-nav">ПРЕИМУЩЕСТВА</a>
 							</li>
 							<li>
-								<a href="" class="">ЗАЯВКА</a>
+								<a href="" class="a-nav">ЗАЯВКА</a>
 							</li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
-							<li>
-								<span>(495) 58-58-231</span>
+							<li class="li-tel">
+								<span class="span-tel">(495) 58-58-231</span>
 							</li>
 							<li>
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Заказать обратный звонок</a>
+								<a href="#" class="a-nav-btn">Заказать обратный звонок</a>
 							</li>
 						</ul>
 					</div>
