--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -80,9 +80,9 @@
 			</nav>
 		</div>
 		<div class="main-site">
-			<div class="search">
-				{% block search %} {% endblock %}
-			</div>
+			{% block search %}
+
+			{% endblock %}
 			<header class="post">
 				<h2>{% block content-title %}{% endblock %}</h2>
 			</header>
