--- a/templates/site/home.html
+++ b/templates/site/home.html
@@ -1,10 +1,10 @@
 {% extends 'base-site.html' %}
 {% load bootstrap3 %}
-
 {% block search %}
+<div class="search">
 
-{% endblock  %}
-
+</div>
+{% endblock %}
 {% block content-title %}
 
 {% endblock %}
