--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -70,7 +70,7 @@
 					<a href="{% url 'my_client' %}" class="list-group-item menu-left">Мои клиенты</a>
 					<a href="{% url 'my_object' %}" class="list-group-item menu-left">Мои объекты</a>
 					<a href="{% url 'my_task' %}" class="list-group-item menu-left">Мои задачи</a>
-					<a href="" class="list-group-item menu-left">Заявки</a>
+					<a href="{% url 'zayavka' %}" class="list-group-item menu-left">Заявки</a>
 					<a href="" class="list-group-item menu-left">Фотобаза</a>
 					<a href="" class="list-group-item menu-left">Чёрный список</a>
 					<a href="{% url 'add_client' %}" class="list-group-item menu-left">Добавить клиента</a>
