--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -53,7 +53,7 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li>
-								<a href="" class="a-nav">ГЛАВНАЯ</a>
+								<a href="{% url 'home' %}" class="a-nav">ГЛАВНАЯ</a>
 							</li>
 							<li>
 								<a href="" class="a-nav">НОВЫЕ</a>
@@ -62,7 +62,7 @@
 								<a href="" class="a-nav">ПРЕИМУЩЕСТВА</a>
 							</li>
 							<li>
-								<a href="" class="a-nav">ЗАЯВКА</a>
+								<a href="{% url 'contact' %}" class="a-nav">ЗАЯВКА</a>
 							</li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
