--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="{{meta.keywords}}">
 	<title>{% block title %}{{meta.title}}{% endblock %}</title>
 	<link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/png">
-	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
+	<link rel="stylesheet" href="{% static 'css/style-admin.css' %}" />
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
 
